[project]
dependencies = [
  "celery-redbeat>=2.2.0",
  "celery>=5.4.0",
  "django-cors-headers>=4.4.0",
  "django-extensions>=3.2.3",
  "django-filter>=24.3",
  "django-storages>=1.14.4",
  "django-stubs-ext>=5.0.4",
  "django-stubs>=5.0.4",
  "django>=5.1",
  "djangorestframework-simplejwt>=5.3.1",
  "djangorestframework>=3.15.2",
  "drf-spectacular>=0.27.2",
  "gunicorn>=23.0.0",
  "pillow>=10.4.0",
  "psycopg[binary]>=3.2.1",
  "django-lifecycle>=1.2.4",
  "rest-social-auth>=8.4.0",
  "uvicorn>=0.30.6",
]
description = "Add your description here"
name = "backend"
requires-python = ">=3.12"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "djlint>=1.35.2",
  'ruff>=0.6.7',
]
docs = [
  "mkdocs-awesome-pages-plugin>=2.9.3",
  "mkdocs-graphviz>=1.5.3",
  "mkdocs-material>=9.5.34",
  "mkdocs>=1.6.1",
]
test = [
  "coverage>=7.6.1",
  "factory-boy>=3.3.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"
# Exclude a variety of commonly ignored directories.
exclude = [
  "migrations",
  "asgi.py",
]
[tool.ruff.lint]
extend-select = ["I"]
ignore = [
  "ANN",
  "D",
  "PT009",
  "B904",
  "S101",
  "ARG001",
  "ARG002",
  "G004",
  "EM102",
  "TRY003",
  "TRY401",
  "EM101",
  "S311",
  "S107",
  "S105",
  "N802",
  "TCH001",
  "TCH002",
  "PTH",
  "RUF012",
  "ERA001", # temporary
]
select = ["ALL"]

per-file-ignores = {}
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.format]
# Like Black, use double quotes for strings.
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.coverage.run]
branch = true
omit = [
  ".venv/*",
  "**/migrations/**",
  "*/admin.py",
  "*/apps.py",
  "manage.py",
  "*/settings.py",
  "*/asgi.py",
  "*/wsgi.py",
  "tests.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
sort = "cover"

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "core.settings"
